--- a/json-rpc.cabal
+++ b/json-rpc.cabal
@@ -31,20 +31,20 @@ library
   other-modules:        Network.JsonRpc.Data,
                         Network.JsonRpc.Conduit
   build-depends:        base                        >= 4.6      && < 5,
-                        aeson                       >= 0.7      && < 0.10,
-                        attoparsec                  >= 0.11,
-                        async                       >= 2.0      && < 2.2,
-                        bytestring                  >= 0.10     && < 0.11,
-                        conduit                     >= 1.2      && < 1.3,
-                        conduit-extra               >= 1.1      && < 1.2,
-                        deepseq                     >= 1.3      && < 1.5,
-                        hashable                    >= 1.1      && < 1.3,
-                        mtl                         >= 2.1      && < 2.3,
-                        stm                         >= 2.4      && < 2.5,
-                        stm-conduit                 >= 2.5      && < 2.8,
-                        text                        >= 0.11     && < 1.3,
-                        transformers                >= 0.3,
-                        unordered-containers        >= 0.2      && < 0.3
+                        aeson,
+                        attoparsec,
+                        async,
+                        bytestring,
+                        conduit,
+                        conduit-extra,
+                        deepseq,
+                        hashable,
+                        mtl,
+                        stm,
+                        stm-conduit,
+                        text,
+                        transformers,
+                        unordered-containers
   default-language:     Haskell2010
   ghc-options:          -Wall
 
